Update multiple articles: add consistent styling for headings and paragraphs to enhance readability Update Footer component: add heading 'Services' to footer links Update FloatingLegalFooter component: change author link to external URL for improved navigation

--- a/content/posts/2024-02-14_Guide_des_competitions_de_bodybuilding_et_fitness.mdx
+++ b/content/posts/2024-02-14_Guide_des_competitions_de_bodybuilding_et_fitness.mdx
@@ -124,3 +124,12 @@ Les compétitions de bodybuilding et de fitness offrent une plateforme unique po
 ## Appel à l'action
 
 Avez-vous déjà assisté à une compétition de bodybuilding ou de fitness ? Quelle catégorie vous intéresse le plus ? Partagez vos expériences ou vos questions dans les commentaires ci-dessous. Pour plus d'informations sur la préparation aux compétitions ou sur l'entraînement spécifique, consultez nos autres articles sur [lien vers d'autres ressources du site].
+
+<style jsx>{`
+  h1,
+  h2,
+  p {
+    color: white !important;
+  }
+`}
+</style>
