--- a/content/posts/2024-11-11_Guide-complet-des-complements-alimentaire-dans-le-sport.mdx
+++ b/content/posts/2024-11-11_Guide-complet-des-complements-alimentaire-dans-le-sport.mdx
@@ -89,4 +89,11 @@ Les compléments alimentaires peuvent jouer un rôle dans la performance sportiv
 
 Avez-vous déjà utilisé des compléments alimentaires dans votre pratique sportive ? Quelles ont été vos expériences ? Partagez vos réflexions dans les commentaires ci-dessous. Pour plus d'informations sur la nutrition sportive, consultez nos autres articles sur [lien vers d'autres ressources du site].
 
-
+<style jsx>{`
+  h1,
+  h2,
+  p {
+    color: white !important;
+  }
+`}
+</style>
