--- a/content/posts/2024-11-12_Le_sommeil_est_capital_dans_la_pratique_sportive.mdx
+++ b/content/posts/2024-11-12_Le_sommeil_est_capital_dans_la_pratique_sportive.mdx
@@ -96,3 +96,12 @@ Le sommeil est un élément souvent sous-estimé dans la quête de la performanc
 ### Appel à l'action
 
 Comment allez-vous améliorer votre routine de sommeil pour booster vos performances sportives ? Partagez vos stratégies et vos expériences dans les commentaires ci-dessous. Pour plus d'informations sur l'optimisation de vos performances athlétiques, consultez nos autres articles sur [lien vers d'autres ressources du site].
+
+<style jsx>{`
+  h1,
+  h2,
+  p {
+    color: white !important;
+  }
+`}
+</style>
