--- a/content/posts/2024-11-13_Comment_perdre_du_poids_de_maniere_saine_et_durable.mdx
+++ b/content/posts/2024-11-13_Comment_perdre_du_poids_de_maniere_saine_et_durable.mdx
@@ -106,3 +106,12 @@ Perdre du poids de manière saine et durable est un voyage qui demande du temps,
 ### Appel à l'action
 
 Quelle stratégie allez-vous mettre en place dès aujourd'hui pour commencer votre parcours de perte de poids saine ? Partagez vos objectifs et vos idées dans les commentaires ci-dessous. Pour plus de conseils sur la nutrition et l'exercice, n'hésitez pas à consulter nos autres articles sur [lien vers d'autres ressources du site].
+
+<style jsx>{`
+  h1,
+  h2,
+  p {
+    color: white !important;
+  }
+`}
+</style>
