--- a/content/posts/2024-11-14_La-salle-de-sport-quand-on-debute.mdx
+++ b/content/posts/2024-11-14_La-salle-de-sport-quand-on-debute.mdx
@@ -100,5 +100,13 @@ Appel à l'action
 
 Avez-vous déjà fait vos premiers pas en salle de sport ? Partagez votre expérience ou vos questions dans les commentaires ci-dessous. Et si vous cherchez des conseils plus spécifiques sur certains exercices ou routines, n'hésitez pas à consulter nos autres articles sur [lien vers d'autres ressources du site].
 
+<style jsx>{`
+  h1,
+  h2,
+  p {
+    color: white !important;
+  }
+`}
+</style>
 
 
