[fix] clean code

--- a/content/posts/2025-08-01_Preparation_repas_equilibres_pour_une_semaine_saine.mdx
+++ b/content/posts/2025-08-01_Preparation_repas_equilibres_pour_une_semaine_saine.mdx
@@ -15,200 +15,134 @@ coverUrl: '/images/legume.jpg'
 status: published
 ---
 
-<h1>Préparation repas équilibrés pour une semaine saine</h1>
+# Préparation repas équilibrés pour une semaine saine
 
-<p>
-  Épuisé par la routine des repas désordonnés, les choix alimentaires improvisés ou les plats industriels ? 
-  Découvrez comment la <strong>préparation de repas équilibrés</strong> révolutionne votre quotidien en mariant organisation et saveurs.  
-  Avec 5 idées simples et variées – comme le <strong>bowl de poulet rôti aux légumes</strong>, la <strong>salade de lentilles corail</strong> ou le <strong>chili végétarien</strong>, alliez protéines maigres, légumes colorés et féculents complets pour des repas rapides, économiques et gourmands.
-</p>
+Épuisé par la routine des repas désordonnés, les choix alimentaires improvisés ou les plats industriels ? Découvrez comment la préparation de repas équilibrés révolutionne votre quotidien en mariant organisation et saveurs.  
+Avec 5 idées simples et variées – comme le bowl de poulet rôti aux légumes, la salade de lentilles corail ou le chili végétarien, alliez protéines maigres, légumes colorés et féculents complets pour des repas rapides, économiques et gourmands.
 
-<p>Gagnez du temps, stabilisez votre énergie grâce à des combinaisons stratégiques et dites adieu aux fringales !</p>
+Gagnez du temps, stabilisez votre énergie grâce à des combinaisons stratégiques et dites adieu aux fringales !
 
-<hr />
+---
 
-<h2>Sommaire</h2>
-<ul>
-  <li><a href="#les-fondations-dun-repas-equilibre--la-methode-de-lassiette-parfaite">Les fondations d’un repas équilibré : la méthode de l’assiette parfaite</a></li>
-  <li><a href="#le-meal-prep--la-methode-infaillible-pour-gagner-du-temps">Le meal prep : la méthode infaillible pour gagner du temps</a></li>
-  <li><a href="#5-idees-de-repas-equilibres-pour-votre-semaine">5 idées de repas équilibrés pour votre semaine</a></li>
-  <li><a href="#astuces-de-pro-pour-une-alimentation-saine-qui-dure">Astuces de pro pour une alimentation saine qui dure</a></li>
-</ul>
+## Sommaire
 
-<hr />
+- [Les fondations d’un repas équilibré : la méthode de l’assiette parfaite](#les-fondations-dun-repas-equilibre--la-methode-de-lassiette-parfaite)
+- [Le meal prep : la méthode infaillible pour gagner du temps](#le-meal-prep--la-methode-infaillible-pour-gagner-du-temps)
+- [5 idées de repas équilibrés pour votre semaine](#5-idees-de-repas-equilibres-pour-votre-semaine)
+- [Astuces de pro pour une alimentation saine qui dure](#astuces-de-pro-pour-une-alimentation-saine-qui-dure)
 
-<h2 id="les-fondations-dun-repas-equilibre--la-methode-de-lassiette-parfaite">
-  Les fondations d’un repas équilibré : la méthode de l’assiette parfaite
-</h2>
+---
 
-<p>Organiser des repas équilibrés semble complexe, mais une méthode simple et visuelle existe : la <strong>règle de l’assiette équilibrée</strong>.</p>
+## Les fondations d’un repas équilibré : la méthode de l’assiette parfaite
 
-<blockquote>
-  📊 <strong>80 % des adultes français</strong> ne consomment pas assez de légumes !
-</blockquote>
+Organiser des repas équilibrés semble complexe, mais une méthode simple et visuelle existe : la règle de l’assiette équilibrée.
 
-<h3>🍽️ La règle des 3 tiers</h3>
-<ul>
-  <li><strong>50 % de légumes</strong> : crus ou cuits, pour leurs fibres et vitamines.</li>
-  <li><strong>25 % de protéines</strong> : poulet, œufs, lentilles, tofu...</li>
-  <li><strong>25 % de céréales complètes</strong> : riz brun, quinoa, boulgour.</li>
-</ul>
-<p>Ajoutez de bonnes graisses (huile d’olive, avocat) pour booster l’absorption des vitamines.</p>
+> 📊 80 % des adultes français ne consomment pas assez de légumes !
 
-<h3>🎯 Bienfaits au quotidien</h3>
-<ul>
-  <li>Énergie stable (glucides lents)</li>
-  <li>Moins de fringales (protéines + fibres)</li>
-  <li>Transit régulé</li>
-  <li>Immunité renforcée (micronutriments)</li>
-</ul>
+### 🍽️ La règle des 3 tiers
 
-<hr />
+- 50 % de légumes : crus ou cuits, pour leurs fibres et vitamines.
+- 25 % de protéines : poulet, œufs, lentilles, tofu...
+- 25 % de céréales complètes : riz brun, quinoa, boulgour.
 
-<h2 id="le-meal-prep--la-methode-infaillible-pour-gagner-du-temps">Le meal prep : la méthode infaillible pour gagner du temps</h2>
+Ajoutez de bonnes graisses (huile d’olive, avocat) pour booster l’absorption des vitamines.
 
-<h3>🥣 Qu’est-ce que le meal prep ?</h3>
-<p>C’est le fait de <strong>préparer ses repas à l’avance</strong> pour la semaine : gain de temps, meilleure alimentation, zéro gaspillage.</p>
+### 🎯 Bienfaits au quotidien
 
-<blockquote>
-  ⏱️ <strong>Jusqu’à 5 heures gagnées</strong> par semaine en cuisine !
-</blockquote>
+- Énergie stable (glucides lents)
+- Moins de fringales (protéines + fibres)
+- Transit régulé
+- Immunité renforcée (micronutriments)
 
-<h3>✅ 4 étapes simples</h3>
-<ol>
-  <li><strong>Planifiez vos recettes</strong> (3 à 4 plats variés)</li>
-  <li><strong>Faites une liste de courses efficace</strong></li>
-  <li><strong>Cuisinez en batch</strong> (1 à 2h le week-end)</li>
-  <li><strong>Stockez intelligemment</strong> (boîtes hermétiques + congélation possible)</li>
-</ol>
+---
 
-<h3>🧰 Le kit de base à petit prix</h3>
-<ul>
-  <li>Boîtes en verre</li>
-  <li>Balance de cuisine</li>
-  <li>Couteau bien aiguisé</li>
-</ul>
+## Le meal prep : la méthode infaillible pour gagner du temps
 
-<hr />
+### 🥣 Qu’est-ce que le meal prep ?
 
-<h2 id="5-idees-de-repas-equilibres-pour-votre-semaine">5 idées de repas équilibrés pour votre semaine</h2>
+C’est le fait de préparer ses repas à l’avance pour la semaine : gain de temps, meilleure alimentation, zéro gaspillage.  
+> ⏱️ Jusqu’à 5 heures gagnées par semaine en cuisine !
 
-<p>Voici un tableau prêt-à-l’emploi pour varier sans vous lasser :</p>
+### ✅ 4 étapes simples
 
-<!-- Le tableau doit être rendu en HTML pur ou avec un composant table si vous en avez -->
-<table>
-  <thead>
-    <tr>
-      <th>Idée de repas</th>
-      <th>Principe clé</th>
-      <th>Préparation</th>
-      <th>Assemblage minute</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><strong>Bowl poulet & légumes rôtis</strong></td>
-      <td>Protéines maigres + légumes</td>
-      <td>Poulet grillé, quinoa, carottes et brocolis</td>
-      <td>Réchauffer et assembler</td>
-    </tr>
-    <tr>
-      <td><strong>Salade lentilles corail, feta, concombre</strong></td>
-      <td>Végétarien + fibres</td>
-      <td>Lentilles corail, concombre, oignon rouge</td>
-      <td>Mélanger et ajouter feta + citron</td>
-    </tr>
-    <tr>
-      <td><strong>Saumon + patate douce + épinards</strong></td>
-      <td>Oméga-3</td>
-      <td>Filet de saumon, purée maison, épinards</td>
-      <td>Réchauffer, servir avec légumes</td>
-    </tr>
-    <tr>
-      <td><strong>Omelette champignons + pain complet</strong></td>
-      <td>Rapide & nutritif</td>
-      <td>Champignons précuits</td>
-      <td>Battre œufs, cuire, servir avec pain</td>
-    </tr>
-    <tr>
-      <td><strong>Chili sin carne</strong></td>
-      <td>Fait maison + fibres</td>
-      <td>Haricots, maïs, tomates, épices</td>
-      <td>Réchauffer et ajouter yaourt ou avocat</td>
-    </tr>
-  </tbody>
-</table>
+1. Planifiez vos recettes (3 à 4 plats variés)
+2. Faites une liste de courses efficace
+3. Cuisinez en batch (1 à 2h le week-end)
+4. Stockez intelligemment (boîtes hermétiques + congélation possible)
 
-<h3>💡 Astuce : variez les composants</h3>
-<ul>
-  <li>Quinoa → boulgour / riz complet</li>
-  <li>Lentilles → pois chiches / haricots noirs</li>
-  <li>Poulet → tofu / œufs / dinde</li>
-</ul>
+### 🧰 Le kit de base à petit prix
 
-<hr />
+- Boîtes en verre
+- Balance de cuisine
+- Couteau bien aiguisé
 
-<h2 id="astuces-de-pro-pour-une-alimentation-saine-qui-dure">Astuces de pro pour une alimentation saine qui dure</h2>
+---
 
-<h3>🔥 Modes de cuisson à privilégier</h3>
-<ul>
-  <li><strong>Vapeur</strong> : préserve les nutriments (brocolis, épinards)</li>
-  <li><strong>Four</strong> : rôtissage sans matière grasse (patates douces, poulet)</li>
-  <li><strong>Papillote</strong> : idéal pour poisson + légumes</li>
-  <li><strong>Poêle</strong> : cuisson rapide avec huile saine</li>
-</ul>
+## 5 idées de repas équilibrés pour votre semaine
 
-<h3>📏 Adapter les portions selon vos besoins</h3>
-<ul>
-  <li>Sportif : + de glucides (150g quinoa cuits / repas)</li>
-  <li>Mode sédentaire : portions modérées (80g quinoa)</li>
-</ul>
+Voici un tableau prêt-à-l’emploi pour varier sans vous lasser :
 
-<blockquote>
-  🧠 Attendez <strong>20 minutes après le repas</strong> avant de vous resservir, pour laisser la satiété s’installer.
-</blockquote>
+| Idée de repas | Principe clé | Préparation | Assemblage minute |
+|--------------|--------------|-------------|-------------------|
+| Bowl poulet & légumes rôtis | Protéines maigres + légumes | Poulet grillé, quinoa, carottes et brocolis | Réchauffer et assembler |
+| Salade lentilles corail, feta, concombre | Végétarien + fibres | Lentilles corail, concombre, oignon rouge | Mélanger et ajouter feta + citron |
+| Saumon + patate douce + épinards | Oméga-3 | Filet de saumon, purée maison, épinards | Réchauffer, servir avec légumes |
+| Omelette champignons + pain complet | Rapide & nutritif | Champignons précuits | Battre œufs, cuire, servir avec pain |
+| Chili sin carne | Fait maison + fibres | Haricots, maïs, tomates, épices | Réchauffer et ajouter yaourt ou avocat |
 
-<h3>💧 Hydratation et sommeil</h3>
-<ul>
-  <li>1,5 à 2 L d’eau / jour</li>
-  <li>7 à 9h de sommeil = meilleure régulation hormonale</li>
-</ul>
+### 💡 Astuce : variez les composants
+- Quinoa → boulgour / riz complet
+- Lentilles → pois chiches / haricots noirs
+- Poulet → tofu / œufs / dinde
 
-<hr />
+---
 
-<h2>Conclusion</h2>
+## Astuces de pro pour une alimentation saine qui dure
 
-<p>
-  Adopter la <strong>méthode de l’assiette équilibrée</strong> + le <strong>meal prep</strong> transforme votre quotidien :
-</p>
-<ul>
-  <li>✅ Gain de temps</li>
-  <li>🍱 Meilleur contrôle nutritionnel</li>
-  <li>💰 Économie</li>
-  <li>🧘‍♀️ Vitalité durable</li>
-</ul>
+### 🔥 Modes de cuisson à privilégier
 
-<p>
-  En testant les <strong>5 idées de repas</strong> proposées et en ajustant selon vos goûts et saisons, vous entrez dans une <strong>routine alimentaire saine et durable</strong> sans contrainte. À vos boîtes, prêts, cuisinez !
-</p>
+- Vapeur : préserve les nutriments (brocolis, épinards)
+- Four : rôtissage sans matière grasse (patates douces, poulet)
+- Papillote : idéal pour poisson + légumes
+- Poêle : cuisson rapide avec huile saine
 
-<blockquote>
-  🔗 <strong>Besoin d’un accompagnement personnalisé ?</strong> Découvrez nos programmes de coaching nutrition adapté à vos objectifs et votre emploi du temps.
-</blockquote>
+### 📏 Adapter les portions selon vos besoins
+
+- Sportif : + de glucides (150g quinoa cuits / repas)
+- Mode sédentaire : portions modérées (80g quinoa)
+
+> 🧠 Attendez 20 minutes après le repas avant de vous resservir, pour laisser la satiété s’installer.
+
+### 💧 Hydratation et sommeil
+
+- 1,5 à 2 L d’eau / jour
+- 7 à 9h de sommeil = meilleure régulation hormonale
+
+---
+
+## Conclusion
+
+Adopter la méthode de l’assiette équilibrée + le meal prep transforme votre quotidien :
+
+- ✅ Gain de temps
+- 🍱 Meilleur contrôle nutritionnel
+- 💰 Économie
+- 🧘‍♀️ Vitalité durable
+
+En testant les 5 idées de repas proposées et en ajustant selon vos goûts et saisons, vous entrez dans une routine alimentaire saine et durable sans contrainte. À vos boîtes, prêts, cuisinez !
+
+---
+
+> 🔗 Besoin d’un accompagnement personnalisé ? Découvrez nos programmes de coaching nutrition adapté à vos objectifs et votre emploi du temps.
 
 <style jsx>{`
   h1,
   h2,
   h3,
-  p,
-  ul,
-  ol,
-  td,
-  th,
-  blockquote,
-  a {
+  p {
     color: white !important;
   }
-`}</style>
+`}
+</style>
 
 
