[Fix] add error try to fix blog

--- a/content/posts/2024-02-10_Comment_garder_un_bon_mindset.mdx
+++ b/content/posts/2024-02-10_Comment_garder_un_bon_mindset.mdx
@@ -11,7 +11,7 @@ tags:
   - Complement alimentaire
   - Entrainement
 coverUrl: '/images/post3.jpg'
-status: published
+status: draft
 ---
 
 ### Introduction
