[Fix] recent posts

--- a/content/posts/2026-02-20_Guide_complet_des_complements_alimentaire_dans_le_sport.mdx
+++ b/content/posts/2026-02-20_Guide_complet_des_complements_alimentaire_dans_le_sport.mdx
@@ -1,5 +1,5 @@
 ---
-title: Guide complet des compléments alimentaires dans le sport 
+title: Guide complet des complements alimentaires dans le sport 
 description: Découvrez notre guide complet pour bien commencer à la salle de sport. Conseils pratiques, erreurs à éviter et astuces pour rester motivé, tout ce qu'il faut savoir pour transformer votre première expérience en réussite !
 keywords:
   - nextjs
