[Fix] recent posts 10

--- a/content/posts/2026-02-19_Pourquoi_les_regimes_echouent_et_comment_reussir_votre_transformation_en_2026.mdx
+++ b/content/posts/2026-02-19_Pourquoi_les_regimes_echouent_et_comment_reussir_votre_transformation_en_2026.mdx
@@ -1,5 +1,5 @@
 ---
-title: Pourquoi les regime echouent et comment reussir votre transformation en 2026
+title: Pourquoi les regimes echouent et comment reussir votre transformation en 2026
 description: Découvrez notre guide complet pour bien commencer à la salle de sport. Conseils pratiques, erreurs à éviter et astuces pour rester motivé, tout ce qu'il faut savoir pour transformer votre première expérience en réussite !
 keywords:
   - salle de sport débutant
