[Fix] recent posts image complement alimentaire

--- a/content/posts/2026-02-19_Pourquoi_les_regimes_echouent_et_comment_reussir_votre_transformation_en_2026.mdx
+++ b/content/posts/2026-02-19_Pourquoi_les_regimes_echouent_et_comment_reussir_votre_transformation_en_2026.mdx
@@ -108,3 +108,13 @@ Si vous êtes à Bordeaux et que vous en avez assez des régimes yoyo, des faux 
 ---
 
 *Mots-clés : coach sportif Bordeaux, perte de poids durable, objectifs fitness 2026, régime échec, transformation physique, programme personnalisé, unlcoaching.com*
+
+<style jsx>{`
+  h1,
+  h2,
+  h3,
+  p {
+    color: white !important;
+  }
+`}
+</style>
