--- a/content/posts/2026-02-20_Guide_complet_des_complements_alimentaire_dans_le_sport.mdx
+++ b/content/posts/2026-02-20_Guide_complet_des_complements_alimentaire_dans_le_sport.mdx
@@ -10,7 +10,7 @@ tags:
   - Fitness
   - Entrainement
   - Exercices
-coverUrl: '/images/post1.jpg'
+coverUrl: '/images/article-complement-alimentaire.jpg'
 status: published
 ---
 ## Les compléments alimentaires dans le sport : Guide complet
