[Fix] clean code footer legal

--- a/content/posts/2026-02-19_Pourquoi_les_regimes_echouent_et_comment_reussir_votre_transformation_en_2026.mdx
+++ b/content/posts/2026-02-19_Pourquoi_les_regimes_echouent_et_comment_reussir_votre_transformation_en_2026.mdx
@@ -17,7 +17,7 @@ status: published
 
 ---
 
-Chaque année, des millions de personnes se lancent avec enthousiasme dans un nouveau régime. Et pourtant, les études sont formelles : environ **90% des régimes alimentaires échouent** dans les 12 mois suivants. Pire encore, la majorité des personnes reprennent plus de poids qu'elles n'en ont perdu. Alors, quelle est la vraie raison de cet échec massif — et surtout, comment faire partie du 10% qui réussit ?
+Chaque année, des millions de personnes se lancent avec enthousiasme dans un nouveau régime. Et pourtant, les études sont formelles : environ <strong>90% des régimes alimentaires échouent</strong> dans les 12 mois suivants. Pire encore, la majorité des personnes reprennent plus de poids qu'elles n'en ont perdu. Alors, quelle est la vraie raison de cet échec massif — et surtout, comment faire partie du 10% qui réussit ?
 
 En tant que coach sportif à Bordeaux, j'accompagne chaque semaine des personnes qui ont "tout essayé" avant de venir me voir. Ce que j'observe, c'est toujours la même chose : ce n'est pas un manque de volonté. C'est un manque de méthode.
 
